Fix POST REST api
